# cairn-protocol

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLI_DELIVERABLES.md  CONTRIBUTING.md  ERC-CAIRN.md  INSTALLATION.md  LICENSE  OLAS_IMPLEMENTATION.md  README.md  SECURITY.md  WHITEPAPER.md  pyproject.toml
.archive/hackathon-synthesis-2026/: demo-script.md  poc-scope.md  sponsor-alignment.md  why-cairn-wins.md
.github/workflows/: tests.yml
.planning/phases/: olas-mech-RESEARCH.md
.planning/phases/00-competitive-research/: 00-RESEARCH.md
.planning/phases/00-research/: 00-RESEARCH.md
.synthesis/: CONVERSATION_LOG.md  SUBMISSION_GUIDE.md  SUBMISSION_PAYLOAD.json  agent.json  agent_log.json
PRDs/: README.md
PRDs/PRD-00-PROTOCOL-VISION/: PRD.md
PRDs/PRD-01-MVP-HACKATHON/: PRD.md  STATUS.md  spawn-contract-dev.md  spawn-frontend-dev.md  spawn-integration.md  spawn-sdk-dev.md
cli/: CLI_IMPLEMENTATION.md  LICENSE  QUICK_REFERENCE.md  README.md  __init__.py  config.py  main.py  utils.py
cli/commands/: __init__.py  admin.py  agent.py  intel.py  pool.py  task.py
contracts/: .env.example  .soldeerignore  ERC_INTEGRATION_SUMMARY.md  LICENSE  UPGRADEABILITY.md  foundry.toml
contracts/script/: Deploy.s.sol  DeployUpgradeable.s.sol  TransferToMultisig.s.sol  Upgrade.s.sol
contracts/src/: ArbiterRegistry.sol  CairnCore.sol  CairnGovernance.sol  CairnTaskMVP.sol  FallbackPool.sol  RecoveryRouter.sol
contracts/src/adapters/: OlasMechAdapter.sol
contracts/src/interfaces/: IArbiterRegistry.sol  ICairnCore.sol  ICairnTaskMVP.sol  ICairnTypes.sol  IERC7710.sol  IERC8004.sol  IERC8183.sol  IFallbackPool.sol  IGovernance.sol  IOlasMech.sol  IRecoveryRouter.sol
contracts/src/upgradeable/: .gitkeep  ArbiterRegistryUpgradeable.sol  CairnCoreUpgradeable.sol  FallbackPoolUpgradeable.sol  RecoveryRouterUpgradeable.sol
contracts/test/: ArbiterRegistry.t.sol  CairnCore.t.sol  CairnGovernance.t.sol  CairnTaskMVP.t.sol  ERCIntegration.t.sol  FallbackPool.t.sol  FallbackPoolOlas.t.sol  OlasMechAdapter.t.sol  RecoveryRouter.t.sol
contracts/test/mocks/: MockERC8004.sol
contracts/test/upgrades/: CairnCoreUpgrade.t.sol
docs/: LICENSE  MULTI_SIG_GOVERNANCE.md  SUBMISSION_DRAFT.md  architecture.md  concepts.md  contracts.md  execution-intelligence.md  integration.md  observer.md  olas-integration.md  real-agent-integration.md  standards.md
examples/: cli_usage.sh
frontend/: .env.local.example  DESIGN_PALETTE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/cairn.md/: route.ts
frontend/app/explorer/: page.tsx
frontend/app/integrate/: page.tsx
frontend/app/intelligence/: page.tsx
frontend/app/operators/: page.tsx
frontend/app/roadmap/: page.tsx
frontend/app/skill.md/: route.ts
frontend/components/: Checkpoints.tsx  DemoControls.tsx  Footer.tsx  Header.tsx  Navigation.tsx  Settlement.tsx  StateBadge.tsx  StateMachine.tsx  TaskDetail.tsx  TaskList.tsx
frontend/hooks/: useCairn.ts  useIntelligence.ts
frontend/lib/: abi.ts  utils.ts  wagmi.ts
frontend/public/: cairn.md  skill.md
pipeline/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  adapter.py  bonfires.py  config.py  example.py  listener.py  patterns.py  records.py  requirements.txt
pipeline/tests/: test_adapter.py  test_patterns.py  test_records.py
sdk/: INTEGRATION_SUMMARY.md  IPFS_INTEGRATION.md  LICENSE  QUICKSTART.md  README.md  TESTING.md  __init__.py  abi.json  agent.py  checkpoint.py  client.py  exceptions.py  observer.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  types.py  verify_integration.py
sdk/cairn/: olas.py
sdk/examples/: __init__.py  checkpoint_example.py
sdk/tests/: __init__.py  conftest.py  test_checkpoint_integration.py  test_olas.py
subgraph/: .gitignore  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  VALIDATION_CHECKLIST.md  package.json  queries.graphql  schema.graphql  subgraph.yaml  tsconfig.json
subgraph/abis/: CairnCore.json
subgraph/scripts/: extract-abi.js
subgraph/src/: mapping.ts
tests/: __init__.py  conftest.py  e2e_happy_path.py  e2e_recovery_path.py  test_agent.py  test_checkpoint.py  test_cli_config.py  test_cli_utils.py  test_client.py  test_e2e.py  test_exceptions.py  test_integration.py  test_observer.py  test_types.py
watcher/: README.md  watcher.py
(+20 files in other folders)
