[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cairn-sdk"
version = "0.1.0"
description = "Python SDK for CAIRN Protocol - Agent Failure and Recovery"
readme = "README.md"
license = { text = "BSL-1.1" }
requires-python = ">=3.10"
authors = [
    { name = "CAIRN Protocol", email = "cairn@example.com" }
]
keywords = ["cairn", "agents", "blockchain", "recovery", "checkpoints"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "web3>=6.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/MarouaBoud/cairn-protocol"
Documentation = "https://github.com/MarouaBoud/cairn-protocol#readme"

[tool.hatch.build.targets.wheel]
packages = ["sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["sdk"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
